--- a/app/views/partials/poilist.hbs
+++ b/app/views/partials/poilist.hbs
@@ -3,7 +3,7 @@
             <div class="ui stacked segment">
         <article class="fifteen wide column">
             <table class="ui celled table segment">
-                <form action="/deletePoi" method="GET">
+                <form action="/deleteOne" method="GET">
                 <thead>
                 <tr>
                     <th>Created by</th>
@@ -22,7 +22,7 @@
                         <td> {{location}} </td>
                         <td> {{description}}</td>
                         <td> {{category.title}}</td>
-                        <td><a href="/deletePoi/{{user._id}}" class="ui icon button">
+                        <td><a href="/deleteOne/{{_id}}" button class="ui icon submit button">
                                 <i class="icon trash"></i>
                             </a>
                         </td>
