--- a/app/views/login.hbs
+++ b/app/views/login.hbs
@@ -1,6 +1,6 @@
 
 
-{{> welcomemenu }}
+{{> welcomemenu id='login' }}
     <section class="ui raised segment">
         <div class="ui grid">
             <aside class="ui six wide column"><img src="images/poi.jpg" class="ui medium image" /></aside>
