--- a/app/views/partials/mainmenu.hbs
+++ b/app/views/partials/mainmenu.hbs
@@ -2,7 +2,7 @@
     <header class="header item"><a href="/"> Points of Interest </a></header>
     <div class="right menu">
         <a id="home"   class= "item" href="/home"> Add a POI</a>
-        <a id="locations" class= "item" href="/locations"> Locations</a>
+        <a id="dashboard" class= "item" href="/dashboard"> Dashboard</a>
         <a id="yourpoi" class= "item" href="/gallery"> Gallery </a>
         <a id="logout" class= "item" href="/logout"> Logout</a>
         <a id="settings" class= "item" href="/settings"> Settings</a>
