--- a/app/views/signup.hbs
+++ b/app/views/signup.hbs
@@ -1,5 +1,5 @@
 
-{{> welcomemenu }}
+{{> welcomemenu id="signup" }}
     <section class="ui raised segment">
         <div class="ui grid">
             <div class="ui ten wide column">
