--- a/app/views/partials/welcomemenu.hbs
+++ b/app/views/partials/welcomemenu.hbs
@@ -1,7 +1,11 @@
 <nav class="ui inverted menu">
     <header class="header item"> <a href="/"> Points of Interest </a> </header>
     <div class="right menu">
-        <a class="item" href="/signup"> Signup</a>
-        <a class="item" href="/login">  Login</a>
+        <a id="signup" class="item" href="/signup"> Signup</a>
+        <a id="login" class="item" href="/login">  Login</a>
     </div>
 </nav>
+
+<script>
+    $("#{{id}}").addClass("active item");
+</script>
