--- a/app/views/partials/createpoi.hbs
+++ b/app/views/partials/createpoi.hbs
@@ -3,7 +3,7 @@
         <aside class="ui six wide column"><img src="images/poi.jpg" class="ui medium image" /></aside>
         <div class="ui ten wide column fluid form">
 
-             <form action="/dashboard/addPoi" method="POST">
+             <form action="/createPoi" method="POST">
                     <form class="ui form">
                         <div class="field">
                             <label>Name</label>
