--- a/app/views/partials/createpoi.hbs
+++ b/app/views/partials/createpoi.hbs
@@ -17,6 +17,17 @@
                             <label>Description</label>
                             <input type="text" name="description" placeholder="Description" size="200">
                         </div>
+
+                            <h4 class="ui dividing header"> Enter Coordinates </h4>
+                            <div class="two fields">
+                                <div class="field">
+                                    <label>Latitude</label> <input placeholder="00.000000" value.bind="location.lat"/>
+                                </div>
+                                <div class="field">
+                                    <label>Longitude</label> <input placeholder="00.000000" value.bind="location.lng"/>
+                                </div>
+                            </div>
+
                         <div class="grouped inline fields">
                             <h3> Select Category </h3>
                             {{#each categories}}
