--- a/app/views/layouts/layout.hbs
+++ b/app/views/layouts/layout.hbs
@@ -6,9 +6,19 @@
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.3.1/dist/jquery.min.js"></script>
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/fomantic-ui@2.8.3/dist/semantic.min.css">
     <script src="https://cdn.jsdelivr.net/npm/fomantic-ui@2.8.3/dist/semantic.min.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.6.0/leaflet.css">
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css"
+          integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ=="
+          crossorigin=""/>
+    <!-- Make sure you put this AFTER Leaflet's CSS -->
+    <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"
+            integrity="sha512-gZwIG9x3wUXg2hdXF6+rVkLF/0Vi9U8D2Ntg4Ga5I5BZpVkVxlJWbSQtXPSiUTtC0TjtGOmxa1AJPuV0CPthew=="
+            crossorigin=""></script>
 </head>
 <body>
+<style>
+    #mapid { height: 180px; }
+</style>
+<div id="mapid"></div>
 <section class="ui container">
     {{{content}}}
 </section>
@@ -19,6 +29,35 @@
         $('.message .close').on('click', function () {
             $(this).closest('.message').transition('fade');
         });
+
+    const mymap = L.map('mapid').setView([53.1424, - 7.6921], 8);//latitude, longitude and zoom level
+    const attribution =
+            '&copy; <a href="https://www.openstreetmap.org/copyright"> OpenStreetMap</a> contributors';
+
+    const tileUrl = 'https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png'
+    const tiles = L.tileLayer(tileUrl, { attribution });
+    tiles.addTo(mymap);
+
+    const poi = L.layerGroup();
+            L.marker([52.2686, -7.0036]).bindPopup('This is Cheek Point, Waterford.').addTo(poi),
+            L.marker([51.4388, -9.4923]).bindPopup('This is Cape Clear, Cork.').addTo(poi),
+            L.marker([52.1167, -6.6167]).bindPopup('This is Great Saltee Island, Wexford.').addTo(poi),
+            L.marker([52.1209, -6.9241]).bindPopup('This is Hook Pennisula, Wexford.').addTo(poi);
+            L.marker([54.299, -8.588]).bindPopup('This is Coney Island, Sligo.').addTo(poi),
+            L.marker([55.2726, -8.2494]).bindPopup('This is Tory Island, Donegal.').addTo(poi),
+            L.marker([54.2239, -9.987603]).bindPopup('This is Belmullet, Mayo.').addTo(poi),
+            L.marker([53.021, -9.409]).bindPopup('This is Crab Island, Clare.').addTo(poi);
+            L.marker([53.2650, -6.1149]).bindPopup('This is Killiney Bay, Dublin.').addTo(poi),
+            L.marker([53.2719, -6.0843]).bindPopup('This is Dalkey Island, Dublin.').addTo(poi),
+            L.marker([53.2750, -6.0938]).bindPopup('This is Coliemore Harbour, Dublin.').addTo(poi),
+            L.marker([52.1614, -7.1493]).bindPopup('This is Tramore Bay, Waterford.').addTo(poi);
+
+   // const marker = L.marker([52.2686, -7.0036]).addTo(mymap);
+
+   poi.addTo(mymap);
+
+
+
 </script>
 </body>
 </html>
