--- a/app/views/gallery.hbs
+++ b/app/views/gallery.hbs
@@ -12,10 +12,10 @@
 <div class="uk-card uk-card-primary uk-card-body">
 
 <div class="uk-container uk-padding-small">
-    <div class="uk-child-width-1-4@s uk-flex uk-flex-center" uk-grid uk-height-match="target: .uk-card">
+    <div class="uk-child-width-1-4@s uk-flex uk-flex-left" uk-grid uk-height-match="target: .uk-card">
         {{#each images}}
             {{> card}}
         {{/each}}
     </div>
-</div>
 
+</div>
