--- a/app/views/layouts/layout.hbs
+++ b/app/views/layouts/layout.hbs
@@ -16,9 +16,9 @@
 </head>
 <body>
 <style>
-    #mapid { height: 180px; }
+    #mapid { height: 200px; }
 </style>
-<div id="mapid"></div>
+<div id="mapid"><aside class="ui six wide column"> </aside></div>
 <section class="ui container">
     {{{content}}}
 </section>
