--- a/app/views/partials/simple-map.hbs
+++ b/app/views/partials/simple-map.hbs
@@ -1,4 +1,9 @@
 
     <div class="ui stacked segment">
-        <div id="${mapId}" class="ui embed" style="height:${mapHeight}px; z-index: 0"></div>
+        <div id="mapid"></div>
+
     </div>
+
+    <script>
+        $("#{{id}}").addClass("active item");
+    </script>
