--- a/app/views/partials/createpoi.hbs
+++ b/app/views/partials/createpoi.hbs
@@ -23,10 +23,12 @@
 
                         <div class="two fields">
                             <div class="field">
-                                <label>Latitude</label> <input type="number" placeholder="00.000000" name="map"/>
+                                <label>Latitude</label>
+                                <input type="number" placeholder="00.000000" name="lat">
                             </div>
                             <div class="field">
-                                <label>Longitude</label> <input type="number" placeholder="00.000000" name="map"/>
+                                <label>Longitude</label>
+                                <input type="number" placeholder="00.000000" name="lng">
                             </div>
                         </div>
 
